--- a/register.html
+++ b/register.html
@@ -38,33 +38,66 @@
 		<div class="wrapper-page">
 			<div class=" card-box">
 				<div class="panel-heading">
-					<h3 class="text-center">Two-way Authentication </h3>
+					<h3 class="text-center"> Sign Up to <strong class="text-custom">harvestdesk</strong> </h3>
 				</div>
 
 				<div class="panel-body">
-					<form method="post" action="#" role="form" class="text-center">
-						
-						<div class="form-group m-b-0">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Unique Authentication" required="">
-								<span class="input-group-btn">
-									<button type="submit" class="btn btn-pink w-sm waves-effect waves-light">
-										Continue
-									</button> 
-								</span>
+					<form class="form-horizontal m-t-20" action="index.html">
+
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="email" required="" placeholder="Email">
 							</div>
 						</div>
 
-						<div class="form-group m-t-30 m-b-0">
-						    <div class="col-sm-12">
-						        <a href="register.html" class="text-dark">Back to Member Login </a>
-						    </div>
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="text" required="" placeholder="Username">
+							</div>
+						</div>
+
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="text" required="" placeholder="Your Business Name">
+							</div>
+						</div>
+
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="text" required="" placeholder="Your Business Email Address">
+							</div>
+						</div>
+	
+
+						<div class="form-group">
+							<div class="col-xs-12">
+								<div class="checkbox checkbox-primary">
+									<input id="checkbox-signup" type="checkbox" checked="checked">
+									<label for="checkbox-signup">I accept <a href="#">Terms and Conditions</a></label>
+								</div>
+							</div>
+						</div>
+
+						<div class="form-group text-center m-t-40">
+							<div class="col-xs-12">
+								<button class="btn btn-pink btn-block text-uppercase waves-effect waves-light" type="submit">
+									Register
+								</button>
+							</div>
 						</div>
 
 					</form>
+
 				</div>
 			</div>
-			
+
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<p>
+						Already have account?<a href="page-login.html" class="text-primary m-l-5"><b>Sign In</b></a>
+					</p>
+				</div>
+			</div>
 
 		</div>
 
