--- a/1.index.html
+++ b/1.index.html
@@ -52,7 +52,13 @@
 
 						<div class="form-group ">
 							<div class="col-xs-12">
-								<input class="form-control" type="text" required="" placeholder="Username">
+								<input class="form-control" type="text" required="" placeholder="First Name">
+							</div>
+						</div>
+
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="text" required="" placeholder="Last Name">
 							</div>
 						</div>
 
