--- a/register.html
+++ b/register.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
-		<meta name="author" content="Coderthemes">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
 		<link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-		<title>Ubold - Responsive Admin Dashboard Template</title>
+		<title>Register</title>
 
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/core.css" rel="stylesheet" type="text/css" />
@@ -46,15 +46,10 @@
 
 						<div class="form-group ">
 							<div class="col-xs-12">
-								<input class="form-control" type="email" required="" placeholder="Email">
-							</div>
-						</div>
-
-						<div class="form-group ">
-							<div class="col-xs-12">
 								<input class="form-control" type="text" required="" placeholder="First Name">
 							</div>
 						</div>
+
 
 						<div class="form-group ">
 							<div class="col-xs-12">
@@ -64,16 +59,25 @@
 
 						<div class="form-group ">
 							<div class="col-xs-12">
-								<input class="form-control" type="text" required="" placeholder="Your Business Name">
+								<input class="form-control" type="text" required="" placeholder="Business Name">
 							</div>
 						</div>
+
 
 						<div class="form-group ">
 							<div class="col-xs-12">
 								<input class="form-control" type="text" required="" placeholder="Your Business Email Address">
 							</div>
 						</div>
-	
+
+
+
+						<div class="form-group ">
+							<div class="col-xs-12">
+								<input class="form-control" type="password" required="" placeholder="Set Your Password">
+							</div>
+						</div>
+
 
 						<div class="form-group">
 							<div class="col-xs-12">
