--- a/forgotpassword.htm
+++ b/forgotpassword.htm
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
-		<meta name="author" content="Coderthemes">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
 		<link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-		<title>Ubold - Responsive Admin Dashboard Template</title>
+		<title>Forget Password</title>
 
 		<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/core.css" rel="stylesheet" type="text/css" />
@@ -38,18 +38,23 @@
 		<div class="wrapper-page">
 			<div class=" card-box">
 				<div class="panel-heading">
-					<h3 class="text-center">Two-way Authentication </h3>
+					<h3 class="text-center">Forget Password </h3>
 				</div>
 
 				<div class="panel-body">
 					<form method="post" action="#" role="form" class="text-center">
-						
+						<div class="alert alert-info alert-dismissable">
+							<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+								×
+							</button>
+							Enter your <b>Email</b> and instructions will be sent to you!
+						</div>
 						<div class="form-group m-b-0">
 							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Unique Authentication" required="">
+								<input type="email" class="form-control" placeholder="Enter Email" required="">
 								<span class="input-group-btn">
 									<button type="submit" class="btn btn-pink w-sm waves-effect waves-light">
-										Continue
+										Submit
 									</button> 
 								</span>
 							</div>
