--- a/register.html
+++ b/register.html
@@ -40,9 +40,11 @@
 				<div class="panel-heading">
 					<h3 class="text-center"> Sign Up to <strong class="text-custom">harvestdesk</strong> </h3>
 				</div>
-
+				
 				<div class="panel-body">
 					<form class="form-horizontal m-t-20" action="index.html">
+						
+						<div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
 
 						<div class="form-group ">
 							<div class="col-xs-12">
