--- a/passwordreset.html
+++ b/passwordreset.html
@@ -29,9 +29,6 @@
     </head>
     <body>
 
-        <div class="animationload">
-            <div class="loader"></div>
-        </div>
 
         <div class="account-pages"></div>
         <div class="clearfix"></div>
@@ -44,6 +41,8 @@
 
             <div class="panel-body">
             <form class="form-horizontal m-t-20" action="index.html">
+
+                <div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
                 
                 <div class="form-group ">
                     <div class="col-xs-12">
