--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -29,9 +29,7 @@
 	</head>
 	<body>
 
-        <div class="animationload">
-            <div class="loader"></div>
-        </div>
+       
 
 		<div class="account-pages"></div>
 		<div class="clearfix"></div>
@@ -43,6 +41,10 @@
 
 				<div class="panel-body">
 					<form method="post" action="#" role="form" class="text-center">
+
+						<div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
+
+
 						<div class="alert alert-info alert-dismissable">
 							<button type="button" class="close" data-dismiss="alert" aria-hidden="true">
 								×
