--- a/login.html
+++ b/login.html
@@ -29,10 +29,7 @@
     </head>
     <body>
 
-        <div class="animationload">
-            <div class="loader"></div>
-        </div>
-
+       
         <div class="account-pages"></div>
         <div class="clearfix"></div>
         <div class="wrapper-page">
@@ -45,6 +42,9 @@
             <div class="panel-body">
             <form class="form-horizontal m-t-20" action="index.html">
                 
+                <div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
+
+
                 <div class="form-group ">
                     <div class="col-xs-12">
                         <input class="form-control" type="text" required="" placeholder="Email">
