--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         <div class="wrapper-page">
         	<div class=" card-box">
             <div class="panel-heading"> 
-                <h3 class="text-center"> Sign In to <strong class="text-custom">harvestdesk</strong> </h3>
+                <h3 class="text-center"> Sign In to <strong class="text-custom">CustomerDesk</strong> </h3>
             </div> 
 
 
