--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
 		<div class="wrapper-page">
 			<div class=" card-box">
 				<div class="panel-heading">
-					<h3 class="text-center"> Sign Up to <strong class="text-custom">harvestdesk</strong> </h3>
+					<h3 class="text-center"> Sign Up to <strong class="text-custom">CustomerDesk</strong> </h3>
 				</div>
 				
 				<div class="panel-body">
