--- a/html/html_Moudles/footer_ubold.html
+++ b/html/html_Moudles/footer_ubold.html
@@ -37,7 +37,9 @@
         <script src="assets/pages/jquery.dashboard.js"></script>
 
         <script src="assets/js/jquery.core.js"></script>
-        <script src="assets/js/jquery.app.js"></script>
+        <script src="assets/js/jquery.app.js"></script>\
+        <script src="assets/js/main.js"></script>
+        
 
         <script type="text/javascript">
             jQuery(document).ready(function($) {
