--- a/html/html_Moudles/header_ubold.html
+++ b/html/html_Moudles/header_ubold.html
@@ -19,7 +19,8 @@
         <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/pages.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
-        <link href="css/style_ubold.css" rel="stylesheet" type="text/css" />
+        <link href="css/style-new.css" rel="stylesheet" type="text/css" />
+        
 
         <!-- HTML5 Shiv and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,9 +37,9 @@
 
     <body class="fixed-left">
 
-         <div class="animationload">
+       <!--   <div class="animationload">
             <div class="loader"></div>
         </div>
-
+ -->
         <!-- Begin page -->
         <div id="wrapper">
