--- a/html/Setup-Business---Step-1.html
+++ b/html/Setup-Business---Step-1.html
@@ -61,6 +61,9 @@
                                                             <div class="col-sm-12">
                                                                 <h4 class="m-b-30">Setup only takes a moment, you'll be up and running in.</h4>
                                                                 <form class="form-horizontal">
+                                                                    
+                                                                    <div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
+
                                                                   <div class="form-group">
                                                                     <div class="col-sm-6">
                                                                         <label for="bussiness" class="col-sm-12 control-label">Your Business</label>
@@ -451,7 +454,7 @@
                                                                   </div>
                                                                   <div class="form-group">
                                                                     <div class="col-sm-12 text-center">
-                                                                      <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">Continue</button>
+                                                                      <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
                                                                     </div>
                                                                   </div>
                                                                 </form>
