--- a/html/html_Moudles/footer_ubold.html
+++ b/html/html_Moudles/footer_ubold.html
@@ -26,6 +26,8 @@
         <!-- jQuery  -->
         <script src="assets/plugins/waypoints/lib/jquery.waypoints.js"></script>
         <script src="assets/plugins/counterup/jquery.counterup.min.js"></script>
+         <script src="assets/plugins/switchery/dist/switchery.min.js"></script>
+
 
 
 
@@ -37,7 +39,9 @@
         <script src="assets/pages/jquery.dashboard.js"></script>
 
         <script src="assets/js/jquery.core.js"></script>
-        <script src="assets/js/jquery.app.js"></script>\
+        <script src="assets/js/jquery.app.js"></script>
+        <script src="assets/js/jquery.timepicker.min.js"></script>
+        
         <script src="assets/js/main.js"></script>
         
 
