--- a/html/html_Moudles/header_ubold.html
+++ b/html/html_Moudles/header_ubold.html
@@ -19,6 +19,9 @@
         <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/pages.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
+        <link href="css/jquery.timepicker.css" rel="stylesheet" type="text/css" />
+         <link href="assets/plugins/switchery/dist/switchery.min.css" rel="stylesheet" />
+
         <link href="css/style-new.css" rel="stylesheet" type="text/css" />
         
 
