--- a/html/previous_closed/11.Setup-Business---Step-5.html
+++ b/html/previous_closed/11.Setup-Business---Step-5.html
@@ -71,14 +71,9 @@
 			                         				        Monday:
 		                         				        </div>
 		                         				           <div class="group group-30">
-			                         				       <div class="onoffswitch one">
-			                         				           <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" 
-			                         				           checked>
-			                         				           <label class="onoffswitch-label" for="myonoffswitch">
-			                         				               <span class="onoffswitch-inner"></span>
-			                         				               <span class="onoffswitch-switch"></span>
-			                         				           </label>
-			                         				       </div>
+			                         				       
+			                         				       <span class="switchery switchery-default" style="border-color: rgb(52, 211, 235); box-shadow: rgb(52, 211, 235) 0px 0px 0px 16px inset; transition: border 0.4s, box-shadow 0.4s, background-color 1.2s; background-color: rgb(52, 211, 235);"><small style="left: 20px; transition: background-color 0.4s, left 0.2s; background-color: rgb(255, 255, 255);"></small></span>
+			                         				       <input type="checkbox" checked="" data-plugin="switchery" data-color="#7266ba" data-switchery="true" style="display: none;">
 		                         				        </div>
 		                         				        <div class="group group-21">
 		                         				        	<input id="timePicker_1" type="text" class="time ui-timepicker-input form-control" autocomplete="
