--- a/html/setup-business-step4.html
+++ b/html/setup-business-step4.html
@@ -80,6 +80,7 @@
 
                                                                 
                                                                 <form class="hours">
+                                                                  <div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
                                                                        <div class="row">
                                                                         <div class="col-sm-7 col-md-7 right-panel">
                                                                         
@@ -291,7 +292,7 @@
                                                                        </div>
                                                                        <div class="form-group">
                                                                          <div class="col-sm-12 text-center">
-                                                                           <a href="12.Setup-Business---Step-Completed.html" type="submit" class="btn btn-green-2 m-top-50  m-bottom-30 ">Continue</a>
+                                                                           <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
                                                                          </div>
                                                                        </div>
                                                                       </form>
