--- a/html/setup-business-step3.html
+++ b/html/setup-business-step3.html
@@ -39,13 +39,13 @@
                                                         <div class="row row-nav">
                                                             <div class="col-xs-12 no-padding">
                                                                 <ul class="nav nav-justified navbar-inverse-modal m-b-30">
-                                                                    <li class=""><a class="active" href="#step-1">
+                                                                    <li class="completed"><a class="completed" href="#step-1">
                                                                             Welcome
                                                                     </a></li>
-                                                                    <li ><a class="" href="#step-3">
+                                                                    <li class="completed" ><a class="completed" href="#step-3">
                                                                         Location
                                                                     </a></li>
-                                                                    <li class=""><a class="" href="#step-2">
+                                                                    <li class=""><a class="completed" href="#step-2">
                                                                         Business Information
                                                                     </a></li>
                                                                     <li class=""><a href="#step-3">
@@ -88,7 +88,7 @@
                                                                     </div>
                                                                     <div class="form-group">
                                                                       <div class="col-sm-12 text-center">
-                                                                        <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
+                                                                        <a href="setup-business-step4.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
                                                                       </div>
                                                                     </div>
                                                                   </form>
