--- a/sass/setup-business-step5.html
+++ b/sass/setup-business-step5.html
@@ -292,7 +292,7 @@
                                                                        </div>
                                                                        <div class="form-group">
                                                                          <div class="col-sm-12 text-center">
-                                                                           <a href="setup-business-step5.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
+                                                                           <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
                                                                          </div>
                                                                        </div>
                                                                       </form>
