--- a/setup-business-step1.html
+++ b/setup-business-step1.html
@@ -624,7 +624,7 @@
                                                                   </div>
                                                                   <div class="form-group">
                                                                     <div class="col-sm-12 text-center">
-                                                                      <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
+                                                                      <a href="setup-business-step2.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
                                                                     </div>
                                                                   </div>
                                                                 </form>
