--- a/setup-business-step2.html
+++ b/setup-business-step2.html
@@ -209,10 +209,10 @@
                                                         <div class="row row-nav">
                                                             <div class="col-xs-12 no-padding">
                                                                 <ul class="nav nav-justified navbar-inverse-modal m-b-30">
-                                                                    <li class=""><a class="active" href="#step-1">
+                                                                    <li class=""><a class="completed" href="#step-1">
                                                                             Welcome
                                                                     </a></li>
-                                                                    <li ><a class="" href="#step-3">
+                                                                    <li ><a class="completed" href="#step-3">
                                                                         Location
                                                                     </a></li>
                                                                     <li class=""><a class="" href="#step-2">
@@ -252,7 +252,7 @@
                                                                       <input type="text" class="form-control" id="inputEmail3" placeholder="Street 1">
                                                                     </div>
                                                                     <div class="col-sm-6">
-                                                                        <label for="inputPassword3" class="col-sm-12 control-label">&nbsp</label>
+                                                                        <label for="inputPassword3" class="col-sm-12 control-label">&nbsp;</label>
                                                                       <input type="text" class="form-control" id="inputPassword3" placeholder="Street 2">
                                                                     </div>
                                                                   </div>
@@ -298,7 +298,7 @@
 
                                                                   <div class="form-group">
                                                                     <div class="col-sm-12 text-center">
-                                                                      <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
+                                                                      <a href="setup-business-step3.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
                                                                     </div>
                                                                   </div>
                                                                 </form>
