--- a/setup-business-step4.html
+++ b/setup-business-step4.html
@@ -209,16 +209,16 @@
                                                         <div class="row row-nav">
                                                             <div class="col-xs-12 no-padding">
                                                                 <ul class="nav nav-justified navbar-inverse-modal m-b-30">
-                                                                    <li class=""><a class="active" href="#step-1">
+                                                                    <li class="completed"><a class="active" href="#step-1">
                                                                             Welcome
                                                                     </a></li>
-                                                                    <li ><a class="" href="#step-3">
+                                                                    <li ><a class="completed" href="#step-3" class="">
                                                                         Location
                                                                     </a></li>
-                                                                    <li class=""><a class="" href="#step-2">
+                                                                    <li class=""><a class="completed" href="#step-2" class="">
                                                                         Business Information
                                                                     </a></li>
-                                                                    <li class=""><a href="#step-3">
+                                                                    <li class=""><a href="#step-3" class='completed'>
                                                                         Hours
                                                                     </a></li>
                                                                     <li class=""><a href="#step-3">
@@ -231,8 +231,8 @@
                                                             <div class="col-sm-12">
                                                                 
                                                                 <div class="row top">
-                                                                  <div class="col-sm-9 text-left">
-                                                                    <h4>STEP only takes a moment, you'll be up and running in no time.</h4>
+                                                                  <div class="col-sm-8 col-sm-offset-1 text-left">
+                                                                    <h4 class="text-left">STEP only takes a moment, you'll be up and running in no time.</h4>
                                                                   </div>
                                                                   <div class="col-sm-3">
                                                                     <a href="Setup-Business---Step-4.html"><i class="glyphicon glyphicon-menu-left"></i>Back to Welcome</a> 
@@ -462,7 +462,7 @@
                                                                        </div>
                                                                        <div class="form-group">
                                                                          <div class="col-sm-12 text-center">
-                                                                           <button type="button" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</button>
+                                                                           <a href="setup-business-step5.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
                                                                          </div>
                                                                        </div>
                                                                       </form>
