--- a/html/setup-business-step4.html
+++ b/html/setup-business-step4.html
@@ -28,7 +28,7 @@
                             <div class="col-sm-12">
 
                                 <div class="setup-panel">
-                                     <div id="custom-width-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
+                                     <div id="custom-width-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
                                             <div class="modal-dialog" style="width:90%; max-width: 990px; ">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
@@ -82,7 +82,7 @@
                                                                 <form class="hours"> 
 
                                                                   <div role="alert" class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
-                                                                  
+
                                                                        <div class="row">
                                                                         <div class="col-sm-7 col-md-7 right-panel">
                                                                         
@@ -294,7 +294,7 @@
                                                                        </div>
                                                                        <div class="form-group">
                                                                          <div class="col-sm-12 text-center">
-                                                                           <a href="setup-business-step5.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
+                                                                           <a href="setup-business-step5.html" class="btn btn-purple btn-rounded waves-effect waves-light">Continue</a>
                                                                          </div>
                                                                        </div>
                                                                       </form>
