--- a/setup-business-step3.html
+++ b/setup-business-step3.html
@@ -198,7 +198,7 @@
                             <div class="col-sm-12">
 
                                 <div class="setup-panel">
-                                     <div id="custom-width-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
+                                     <div id="custom-width-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
                                             <div class="modal-dialog" style="width:90%; max-width: 990px; ">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
@@ -229,7 +229,7 @@
                                                         </div> <!-- form-group -->
                                                         <div class="row">
                                                             <div class="col-sm-12">
-                                                              
+
                                                                 <h4 class="m-b-30">Setup only takes a moment, you'll be up and running in.</h4>
                                                                 
                                                                   <form class="form-horizontal page-3">
@@ -259,7 +259,7 @@
                                                                     </div>
                                                                     <div class="form-group">
                                                                       <div class="col-sm-12 text-center">
-                                                                        <a href="setup-business-step4.html" class="btn btn-purple btn-rounded waves-effect waves-light" data-dismiss="modal">Continue</a>
+                                                                        <a href="setup-business-step4.html" class="btn btn-purple btn-rounded waves-effect waves-light" >Continue</a>
                                                                       </div>
                                                                     </div>
                                                                   </form>
