--- a/setup-business-step5.html
+++ b/setup-business-step5.html
@@ -198,7 +198,7 @@
                             <div class="col-sm-12">
 
                                 <div class="setup-panel">
-                                     <div id="custom-width-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
+                                     <div id="custom-width-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
                                             <div class="modal-dialog" style="width:90%; max-width: 990px; ">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
