--- a/setup-business-step4.html
+++ b/setup-business-step4.html
@@ -231,7 +231,7 @@
                                                             <div class="col-sm-12">
                                                                 
                                                                 <div class="row top">
-                                                                  <div class="col-sm-8 col-sm-offset-1 text-left">
+                                                                  <div class="col-sm-9  text-left">
                                                                     <h4 class="text-left">STEP only takes a moment, you'll be up and running in no time.</h4>
                                                                   </div>
                                                                   <div class="col-sm-3">
@@ -239,7 +239,7 @@
                                                                   </div>
                                                                 </div>
                                                                 <div class="row">
-                                                                  <div class="col-sm-10 col-sm-offset-1 text-center ">
+                                                                  <div class="col-sm-12 text-center ">
                                                                     <h4 class="bold text-left m-b-30">Let your customers know when your're open.</h4>
                                                                     <div class="well hours">
                                                                       Your time zone is set to <span class="timezone">Indian Standard Time (GMT +5:30).</span>
