--- a/setup-business-step3.html
+++ b/setup-business-step3.html
@@ -197,7 +197,7 @@
                         <div class="row">
                             <div class="col-sm-12">
 
-                                <div class="setup-panel">
+                                <div class="setup-panel page-3">
                                      <div id="custom-width-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
                                             <div class="modal-dialog" style="width:90%; max-width: 990px; ">
                                                 <div class="modal-content">
