--- a/html/setup-business-step1.html
+++ b/html/setup-business-step1.html
@@ -285,6 +285,114 @@
                                                                           </select>
                                                                     </div>
                                                                   </div>
+                                                                  
+                                                                  <div class="form-group">
+                                                                    <div class="col-sm-6">
+                                                                        <label for="bussiness" class="col-sm-12 control-label">Name of the Business Owner</label>
+                                                                      <input type="text" class="form-control" id="bussiness" placeholder="">
+                                                                    </div>
+                                                                    <div class="col-sm-6">
+                                                                        <label for="bussiness" class="col-sm-12 control-label">Currency Type</label>
+                                                                      <select class="form-control" id="wizCurrencyId">
+                                                                        <option value="98">ALL (ALL)</option>
+                                                                            <option value="73">ANG (ANG)</option>
+                                                                            <option value="26">ARS ($)</option>
+                                                                            <option value="9">AUD ($)</option>
+                                                                            <option value="28">BSD ($)</option>
+                                                                            <option value="35">BHD (BD)</option>
+                                                                            <option value="82">BDT (Tk)</option>
+                                                                            <option value="31">BBD ($)</option>
+                                                                            <option value="30">BMD ($)</option>
+                                                                            <option value="68">VEF (Bs.F)</option>
+                                                                            <option value="76">BOB (Bs)</option>
+                                                                            <option value="43">BGN (BGN)</option>
+                                                                            <option value="99">KHR (KHR)</option>
+                                                                            <option value="6">CAD (Can$)</option>
+                                                                            <option value="93">KYD (CI$)</option>
+                                                                            <option value="61">XAF (XAF)</option>
+                                                                            <option value="81">XPF (XPF)</option>
+                                                                            <option value="25">CLP ($)</option>
+                                                                            <option value="55">CRC (CRC)</option>
+                                                                            <option value="39">CZK (Kc)</option>
+                                                                            <option value="13">DKK (kr)</option>
+                                                                            <option value="1" selected="selected">USD ($)</option>
+                                                                            <option value="65">TTD (TT$)</option>
+                                                                            <option value="95">DOP (RD$)</option>
+                                                                            <option value="71">AMD (AMD)</option>
+                                                                            <option value="53">XCD ($)</option>
+                                                                            <option value="29">XCD (EC$)</option>
+                                                                            <option value="79">EGP (E£)</option>
+                                                                            <option value="8">EUR (€)</option>
+                                                                            <option value="85">FJD ($)</option>
+                                                                            <option value="52">HUF (Ft)</option>
+                                                                            <option value="56">GMD (GMD)</option>
+                                                                            <option value="89">GEL (GEL)</option>
+                                                                            <option value="84">GIP (£)</option>
+                                                                            <option value="94">HTG (HTG)</option>
+                                                                            <option value="17">HKD ($)</option>
+                                                                            <option value="57">UAH (UAH)</option>
+                                                                            <option value="49">IDR (Rp)</option>
+                                                                            <option value="37">ILS (NIS)</option>
+                                                                            <option value="70">JMD (J$)</option>
+                                                                            <option value="15">JPY (YEN)</option>
+                                                                            <option value="87">JOD (JOD)</option>
+                                                                            <option value="54">ISK (kr)</option>
+                                                                            <option value="18">HRK (Kuna)</option>
+                                                                            <option value="51">KWD (KWD)</option>
+                                                                            <option value="63">LVL (LVL)</option>
+                                                                            <option value="88">LBP (LBP)</option>
+                                                                            <option value="80">SZL (SZL)</option>
+                                                                            <option value="58">LTL (Lt)</option>
+                                                                            <option value="78">MKD (MKD)</option>
+                                                                            <option value="92">AZN (AZN)</option>
+                                                                            <option value="90">MUR (Rs)</option>
+                                                                            <option value="91">MDL (MDL)</option>
+                                                                            <option value="83">MAD (MAD)</option>
+                                                                            <option value="96">NGN (NGN)</option>
+                                                                            <option value="32">NAD ($)</option>
+                                                                            <option value="47">NPR (NPR)</option>
+                                                                            <option value="14">NZD ($)</option>
+                                                                            <option value="23">NOK (NOK)</option>
+                                                                            <option value="59">PEN (PEN)</option>
+                                                                            <option value="60">PKR (Rs)</option>
+                                                                            <option value="66">PAB (BL)</option>
+                                                                            <option value="62">COP ($)</option>
+                                                                            <option value="44">MXN ($)</option>
+                                                                            <option value="20">PHP (piso)</option>
+                                                                            <option value="21">PLN (zl)</option>
+                                                                            <option value="97">GTQ (GTQ)</option>
+                                                                            <option value="11">ZAR (R)</option>
+                                                                            <option value="10">BRL (R$)</option>
+                                                                            <option value="75">OMR (OMR)</option>
+                                                                            <option value="16">MYR (RM)</option>
+                                                                            <option value="69">QAR (QAR)</option>
+                                                                            <option value="48">RON (lei)</option>
+                                                                            <option value="100">BYR (BYR)</option>
+                                                                            <option value="50">LKR (Rs)</option>
+                                                                            <option value="2">INR (Rs.)</option>
+                                                                            <option value="38">RUB (RUB)</option>
+                                                                            <option value="45">SAR (SR)</option>
+                                                                            <option value="72">RSD (RSD)</option>
+                                                                            <option value="64">KES (Ksh)</option>
+                                                                            <option value="22">SGD ($)</option>
+                                                                            <option value="36">KRW (KRW)</option>
+                                                                            <option value="12">SEK (kr)</option>
+                                                                            <option value="46">CHF (CHF)</option>
+                                                                            <option value="67">TWD (NT$)</option>
+                                                                            <option value="33">TZS (TZS)</option>
+                                                                            <option value="77">KZT (KZT)</option>
+                                                                            <option value="19">THB (baht)</option>
+                                                                            <option value="24">TRY (TL)</option>
+                                                                            <option value="3">EUR (€)</option>
+                                                                            <option value="4">GBP (₤)</option>
+                                                                            <option value="34">AED (AED)</option>
+                                                                            <option value="27">UYU (UYU)</option>
+                                                                            <option value="86">VND (VND)</option>
+                                                                            <option value="5">CNY (CNY)</option>
+                                                                    </select>
+                                                                    </div>
+                                                                  </div>
+
                                                                    <div class="form-group">
                                                                     <div class="col-sm-6">
                                                                         <label for="inputEmail3" class="col-sm-12 control-label">Phone Number</label>
