--- a/exchange/exchange-table.html
+++ b/exchange/exchange-table.html
@@ -291,7 +291,16 @@
 								<form class="form-inline filter-form">
 									<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option value="1" selected="selected">Credit Rating</option>
+										     <option>2</option>
+										    <option>3</option>
+										    <option>4</option>
+										    <option>5</option>
+										  </select>
+										</div>
+										<div class="form-group">
+										  <select class="form-control">
+										    <option>Min Best Interest</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -300,7 +309,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Max Best Interest</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -309,7 +318,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Min Amount</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -318,7 +327,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Max Amount</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
