--- a/exchange/html/exchange-table.html
+++ b/exchange/html/exchange-table.html
@@ -219,7 +219,16 @@
 								<form class="form-inline filter-form">
 									<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option value="1" selected="selected">Credit Rating</option>
+										     <option>2</option>
+										    <option>3</option>
+										    <option>4</option>
+										    <option>5</option>
+										  </select>
+										</div>
+										<div class="form-group">
+										  <select class="form-control">
+										    <option>Min Best Interest</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -228,7 +237,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Max Best Interest</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -237,7 +246,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Min Amount</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
@@ -246,7 +255,7 @@
 										</div>
 										<div class="form-group">
 										  <select class="form-control">
-										    <option>1</option>
+										    <option>Max Amount</option>
 										    <option>2</option>
 										    <option>3</option>
 										    <option>4</option>
