--- a/exchange/exchange-table.html
+++ b/exchange/exchange-table.html
@@ -269,7 +269,7 @@
 
 	                                <div class="loan-application-2">
 	                                     <div class="heading">
-	                                        <h4 class="bold">Loan Application<button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">X-CLOSE</span></button></h4>
+	                                        <h4 class="bold">Current Bid<button type="button" class="close pull-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">X-CLOSE</span></button></h4>
 	                                    </div>
 	                                   
 	                                    <div class="clearfix"></div>
