--- a/gvg-langing-page/landing-page.html
+++ b/gvg-langing-page/landing-page.html
@@ -158,8 +158,8 @@
                                                  <div class="item"><img src="images/dr.png" alt="Owl Image"></div>
                                                  <div class="item"><img src="images/dr.png" alt="Owl Image"></div>
                                             </div>
-                                            <img src="images/pre.png" alt="" class="indicator-pre">
-                                            <img src="images/next.png" alt="" class="indicator-next">
+                                            <img src="images/pre-landing.png" alt="" class="indicator-pre">
+                                            <img src="images/next-landing.png" alt="" class="indicator-next">
                                       </div>
                                     
                                    
